src/test/ui/parser/recover-from-bad-variant.stderr
error: expected type, found `3`
  --> $DIR/recover-from-bad-variant.rs:7:26
   |
LL |     let x = Enum::Foo(a: 3, b: 4);
   |                        - ^ expected type
   |                        |
   |                        tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information

error[E0532]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:10:9
   |
LL |     Foo { a: usize, b: usize },
   |     -------------------------- `Enum::Foo` defined here
...
LL |         Enum::Foo(a, b) => {}
   |         ^^^^^^^^^ did you mean `Enum::Foo { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
